--- a/Chapter10.ipynb
+++ b/Chapter10.ipynb
@@ -50,7 +50,7 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "#Exercise 10.1", 
       "", 
@@ -120,11 +120,11 @@
      "cell_type": "code", 
      "collapsed": true, 
      "input": [
-      "#Excercise 2"
+      ""
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 52
+     "prompt_number": "&nbsp;"
     }, 
     {
      "cell_type": "code", 
@@ -149,7 +149,7 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "chop([1,2,3,4,5])"
      ], 
@@ -240,6 +240,113 @@
       }
      ], 
      "prompt_number": 75
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": true, 
+     "input": [
+      "#Excercise 10.3", 
+      "", 
+      "def is_sorted(l):", 
+      "    index = 1", 
+      "    for n in l:", 
+      "        if l[index] <= l[index-1]:", 
+      "            return False", 
+      "    return True"
+     ], 
+     "language": "python", 
+     "outputs": [], 
+     "prompt_number": 1
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "is_sorted([1,2,3,4,5])"
+     ], 
+     "language": "python", 
+     "outputs": [
+      {
+       "output_type": "pyout", 
+       "prompt_number": 2, 
+       "text": [
+        "True"
+       ]
+      }
+     ], 
+     "prompt_number": 2
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "is_sorted(['a','b','c'])"
+     ], 
+     "language": "python", 
+     "outputs": [
+      {
+       "output_type": "pyout", 
+       "prompt_number": 4, 
+       "text": [
+        "True"
+       ]
+      }
+     ], 
+     "prompt_number": 4
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "is_sorted([1,2,3,3,2,4,5])"
+     ], 
+     "language": "python", 
+     "outputs": [
+      {
+       "output_type": "pyout", 
+       "prompt_number": 5, 
+       "text": [
+        "True"
+       ]
+      }
+     ], 
+     "prompt_number": 5
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "is_sorted([3,2,1])"
+     ], 
+     "language": "python", 
+     "outputs": [
+      {
+       "output_type": "pyout", 
+       "prompt_number": 7, 
+       "text": [
+        "False"
+       ]
+      }
+     ], 
+     "prompt_number": 7
+    }, 
+    {
+     "cell_type": "code", 
+     "collapsed": false, 
+     "input": [
+      "is_sorted(['c','b','a'])"
+     ], 
+     "language": "python", 
+     "outputs": [
+      {
+       "output_type": "pyout", 
+       "prompt_number": 8, 
+       "text": [
+        "False"
+       ]
+      }
+     ], 
+     "prompt_number": 8
     }, 
     {
      "cell_type": "code", 
